test/Fail/RecordPattern1.err
RecordPattern1.agda:2.6-21: error: [SplitError.NotADatatype]
Cannot split on argument of non-datatype Set
when checking that the pattern record { x = _ } has type Set
